--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,30 @@ configurations{
     compile.extendsFrom provided
 }
 
+jar{
+    manifest{
+        attributes 'Main-Class': 'me.mrkirby153.uhc.bot.Main'
+    }
+}
+
+repositories {
+    mavenCentral();
+    mavenLocal();
+    jcenter();
+    maven {
+        name = "bintray"
+        url = "http://jcenter.bintray.com"
+    }
+    maven {
+        name = "Sonatype"
+        url = "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
+}
 dependencies{
+    compile 'net.dv8tion:JDA:1.4.0_238'
+    compile 'jline:jline:2.13'
+    compile 'org.apache.logging.log4j:log4j-core:2.5'
+    compile 'com.google.guava:guava-io:r03'
 }
 jar {
     dependsOn configurations.runtime
