Basic framework for robot.
The robot is capable of joining servers, processing chat messages,
creating/removing channels and some other behind the scenes things.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ target/
 gradle.properties
 build/
 
-# QuarxelManager
-testServer/
-
-development.ppk
+# KC-UHC Bot
+logs/
+config.properties
+servers.json
