--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         }
     }
     dependencies {
+        testCompile 'junit:junit:4.12'
         compile 'net.dv8tion:JDA:2.0.0_242'
         compile 'jline:jline:2.13'
         compile 'org.apache.logging.log4j:log4j-core:2.5'
