--- a/Network/build.gradle
+++ b/Network/build.gradle
@@ -5,3 +5,10 @@ apply plugin: 'maven'
 dependencies{
     compile 'redis.clients:jedis:2.8.0'
 }
+publishing {
+    publications {
+        jar(MavenPublication) {
+            from components.java
+        }
+    }
+}
