--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>2.2.1_353</version>
+            <version>3.0.BETA_95</version>
         </dependency>
         <dependency>
             <groupId>jline</groupId>
